--- a/src/App/views/parts/head.view.twig
+++ b/src/App/views/parts/head.view.twig
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style/reset.css" rel="stylesheet" type="text/css">
     <link href="./style/styles.css" rel="stylesheet" type="text/css">
+    <link href="./style/modal.css" rel="stylesheet" type="text/css">
     <script src="./scripts/classPaw.js"></script>
     <script src="./scripts/app.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
