--- a/src/App/views/portal-admin/adminBeachResor.view.twig
+++ b/src/App/views/portal-admin/adminBeachResor.view.twig
@@ -20,10 +20,48 @@
                                                 <td>{{ beachResort.fields.name }}</td>
                                                 <td id="ciudad">{{ beachResort.fields.city }}</td>
                                                 <td class="center">{{ beachResort.fields.state }}</td>
-                                                <td class="center">Ver</td>
+                                                <td class="center">
+                                                        <a title="Editar" href="/editarBeachResort"><i class="fa-solid fa-pen-to-square"></i></a>
+                                                        <a title="Habilitar" href="#" onClick="confirmar('¿Deséa habilitar el Balneario?','/enableBeachResort', '{{ beachResort.fields.id }}')" {% if beachResort.fields.state == 1 %} style="display:none;" {% endif %}><i class="fa-solid fa-circle-check"></i></a>
+                                                        <a title="Deshabilitar" href="#" onClick="confirmar('¿Deséa deshabilitar el Balneario?','/disableBeachResort', '{{ beachResort.fields.id }}')" {% if beachResort.fields.state == 0 %} style="display:none;" {% endif %}><i class="fa-solid fa-eye-slash"></i></a>
+                                                </td>
                                         </tr>
                                 {% endfor %}                            
                         </tbody>
                </table> 
         </section>
+
+        <!-- Modal -->
+        <span id="exampleModal" class="modal">
+                <span class="modal-content">
+                        <a class="close" onclick="closeModal()">&times;</a>
+                        <p id="texto"></p>
+                        <form id="modal" method="post">
+                        <input type="hidden" id="idbeachresort" name="idbeachresort">
+                        <button type="submit">Confirmar</button>
+                        </form>
+                </span>
+        </span>   
+{% endblock %}
+
+{% block javascript %}
+        function confirmar(text, route, id) {
+            var form = document.getElementById('modal');
+            form.action = route;
+            document.getElementById('texto').innerHTML = text;
+            document.getElementById("idbeachresort").value = id;
+            document.getElementById("exampleModal").style.display = "block";  
+        }
+
+        function closeModal() {
+            document.getElementById("exampleModal").style.display = "none";
+        }
+
+        // Cerrar el modal si el usuario hace clic fuera del modal
+        window.onclick = function(event) {
+            var modal = document.getElementById("exampleModal");
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
 {% endblock %}
