--- a/src/App/views/index.view.twig
+++ b/src/App/views/index.view.twig
@@ -28,7 +28,7 @@
                 <article class="card">    
                     <h3>{{ city.fields.name }}</h3>
                     <figure>
-                        <img src="./../imagenes/cities/{{ city.fields.id }}/city.jpg" alt="city" height=5em" ;>
+                        <img src="./../imagenes/cities/{{ city.fields.id }}/city.jpg" alt="city" >
                     </figure>
                     <p>Balnearios: 4</p>
                 </article> 
