--- a/src/App/views/beachResort.index.view.twig
+++ b/src/App/views/beachResort.index.view.twig
@@ -4,15 +4,19 @@
 {% block main %}
         <h1>{{ titulo }}</h1>
         <section>
-                {% for beachResort in beachResorts %}
-			{% if beachResort.fields.state != 3 %}
-                                <article>
-                                        <h2>{{ beachResort.fields.name }}</h2>
-                                        <img src="./../imagenes/sombrilla.jpeg" alt="carpa">
-                                        <p>{{ beachResort.fields.description }}</p>
-                                        <a href="beachResort?id={{ beachResort.fields.id }}">Reservar </a>
-                                </article>
-                        {% endif %}
-		{% endfor %}
+                {% for city in cities %}
+                        <h2>{{ city.fields.name }}</h2>
+                        {% for beachResort in beachResorts %}
+                                {% if beachResort.fields.city == city.fields.id %}
+                                        {% if beachResort.fields.state != 3 %}
+                                                <article>
+                                                        <h3>{{ beachResort.fields.name }}</h3>
+                                                        <img src="./../imagenes/sombrilla.jpeg" alt="carpa">
+                                                        <a href="beachResort?id={{ beachResort.fields.id }}">Reservar </a>
+                                                </article>
+                                        {% endif %}
+                                {% endif %}
+                        {% endfor %}
+                {% endfor %}
         </section>
 {% endblock %}
