--- a/src/App/views/parts/nav.view.twig
+++ b/src/App/views/parts/nav.view.twig
@@ -1,6 +1,7 @@
 
 <nav>
     <ul>
+        <li><img src="./../imagenes/logo.png" alt="logo" ></li>
         {% for item in menu %}
         <li><a href= {{ item.href }} >{{ item.name }}</a></li>
         {% endfor %}
