--- a/src/App/views/parts/nav.view.twig
+++ b/src/App/views/parts/nav.view.twig
@@ -1,9 +1,15 @@
-
 <nav>
     <ul>
-        <li><img src="./../imagenes/logo.png" alt="logo" ></li>
+        <li class="logo-item">
+            <img src="./../imagenes/logo.png" alt="logo">
+            <span>TENTS</span>
+        </li>
         {% for item in menu %}
-        <li><a href= {{ item.href }} >{{ item.name }}</a></li>
+            {% if item.name == 'Acceso' %}
+                <li class="botonLogin"><a href="{{ item.href }}">{{ item.name }}</a></li>
+            {% else %}
+                <li><a href="{{ item.href }}">{{ item.name }}</a></li>
+            {% endif %}
         {% endfor %}
-        </ul>
+    </ul>
 </nav>
