Cambios en el logo

--- a/src/App/views/parts/head.view.twig
+++ b/src/App/views/parts/head.view.twig
@@ -7,6 +7,7 @@
     <link href="./style/reset.css" rel="stylesheet" type="text/css">
     <link href="./style/styles.css" rel="stylesheet" type="text/css">
     <link href="./style/modal.css" rel="stylesheet" type="text/css">
+     <link rel="icon" type="image/png" href="./../imagenes/logo.png">
     <script src="./scripts/classPaw.js"></script>
     <script src="./scripts/app.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
