--- a/src/App/views/portal-admin/adminBeachResor.view.twig
+++ b/src/App/views/portal-admin/adminBeachResor.view.twig
@@ -7,7 +7,6 @@
                 </section> 
                 <table class="tents-table">
                         <thead>
-                                <th>ID</th>
                                 <th>Nombre</th>
                                 <th>Ciudad</th>
                                 <th>Estado</th>
@@ -16,10 +15,9 @@
                         <tbody>
                                 {% for beachResort in beachResorts %}
                                         <tr class="ABM row-{{ loop.index is odd ? "odd" : "even" }}">
-                                                <td class="center">{{ beachResort.fields.id }}</td>
-                                                <td>{{ beachResort.fields.name }}</td>
-                                                <td id="ciudad">{{ beachResort.fields.city }}</td>
-                                                <td class="center">{{ beachResort.fields.state }}</td>
+                                                <td>{{ beachResort.beach_resort_name }}</td>
+                                                <td id="ciudad">{{ beachResort.city_name }}</td>
+                                                <td>{{ beachResort.state_beach_resort_name }}</td>
                                                 <td class="center">
                                                         <a title="Editar" href="/editarBeachResort"><i class="fa-solid fa-pen-to-square"></i></a>
                                                         <a title="Habilitar" href="#" onClick="confirmar('¿Deséa habilitar el Balneario?','/enableBeachResort', '{{ beachResort.fields.id }}')" {% if beachResort.fields.state == 1 %} style="display:none;" {% endif %}><i class="fa-solid fa-circle-check"></i></a>
