--- a/src/App/views/parts/head.view.twig
+++ b/src/App/views/parts/head.view.twig
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
     <link href="./style/reset.css" rel="stylesheet" type="text/css">
     <link href="./style/styles.css" rel="stylesheet" type="text/css">
     <link href="./style/modal.css" rel="stylesheet" type="text/css">
