--- a/src/App/views/parts/nav.view.twig
+++ b/src/App/views/parts/nav.view.twig
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li class="logo-item">
-            <img src="./../imagenes/logo.png" alt="logo">
+            <img src="./../../imagenes/logo.png" alt="logo">
             <span>TENTS</span>
         </li>
         {% for item in menu %}
