--- a/src/App/views/parts/head.view.twig
+++ b/src/App/views/parts/head.view.twig
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./style/reset.css" rel="stylesheet" type="text/css">
-    <link href="./style/styles.css" rel="stylesheet" type="text/css">
-    <link href="./style/modal.css" rel="stylesheet" type="text/css">
+    <link href="../../style/reset.css" rel="stylesheet" type="text/css">
+    <link href="../../style/styles.css" rel="stylesheet" type="text/css">
+    <link href="../../style/modal.css" rel="stylesheet" type="text/css">
      <link rel="icon" type="image/png" href="./../imagenes/logo.png">
-    <script src="./scripts/classPaw.js"></script>
-    <script src="./scripts/app.js"></script>
+    <script src="../../scripts/classPaw.js"></script>
+    <script src="../../scripts/app.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
