--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -521,3 +521,23 @@ object{
     }
 }
 
+/* Oculta por defecto la imagen SVG en las reservas */
+#svgImage {
+  display: none;
+}
+
+/* Elemento "cargando" */
+.loading {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  border: 3px solid var(--secondary-color2);
+  border-top: 3px solid var(--principal-color2);
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
