--- a/src/App/views/portal-user/index.view.twig
+++ b/src/App/views/portal-user/index.view.twig
@@ -30,7 +30,7 @@
                 <article class="card">    
                     <h3>{{ city.fields.name }}</h3>
                     <figure>
-                        <img src="./../imagenes/cities/{{ city.fields.id }}/city.jpg" alt="city" >
+                        <img src="{{ city.fields.img }}" alt="{{ city.fields.name }}" >
                     </figure>
                     <p>Balnearios: 4</p>
                 </article> 
