--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -174,7 +174,7 @@ h2{
     line-height: 1.8;
 }
 
-.newBeachResort {
+.newBeachResort, .newCity {
   width: 50%;
   text-align: center;
   margin: 0 auto;
@@ -195,6 +195,15 @@ h2{
 .newBeachResort label {
   font-weight: bold;
 }
+
+.newCity .bReserva {
+  margin-top: 30px;
+}
+
+.newCity label {
+  font-weight: bold;
+}
+
 
 .newBeachResort textarea {
   max-width: 99%;
