--- a/src/App/views/portal-admin/newCity.view.twig
+++ b/src/App/views/portal-admin/newCity.view.twig
@@ -2,12 +2,68 @@
 
 {% block main %}
     <h1>Nueva Ciudad</h1>
-    <form class="newBeachResort" action="/submitCity" method = "POST">  
+    <form class="newCity" action="/submitCity" method = "POST" enctype="multipart/form-data">  
         <label for="name">Nombre:</label>
         <input type="text" id="name" name="name" required>
-        <div>
+        <label for="imagen">Selecciona una imagen:</label>
+        <input type="file" id="imagen" name="imagen" accept="image/*">
+
+        <input type="hidden" id="longitud" name="longitud" value="0">
+        <input type="hidden" id="latitud" name="latitud" value="0">
+
+        <section class="conteinerBtnLocalizar">
+            <button type='button' id="btnLocalizar" class="btnLocalizar">Localizar</button>
+        </section>
+        
+        <section style="width:100%; height:300px;" class="map" id="map"></section>
+
+        <section>
             <button class="bReserva" type="submit">Envíar</button>
-        </div>
+        </section>
     </form>
-    </section>
+{% endblock %}
+
+{% block javascript %}
+    <script>
+        const longitud = document.getElementById("longitud");
+        const latitud = document.getElementById("latitud");
+        var map = L.map('map');
+        map.setView([-34.6037, -58.3816], 5);
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+        }).addTo(map);
+        var markers = [];
+        // Función para limpiar todos los marcadores del mapa
+        function clearMarkers() {
+            markers.forEach(marker => map.removeLayer(marker));
+            markers = [];
+        }
+        const apiNominatim = async (ciudad, provincia, pais) => {
+            const response = await fetch('https://nominatim.openstreetmap.org/search?city='+ciudad+'&state='+provincia+'&country='+pais+'&format=json');
+            const responseJSON = await response.json(); //extract JSON from the http response
+            if (responseJSON.length !== 0) {
+                longitud.value = responseJSON[0].lon;
+                latitud.value = responseJSON[0].lat;
+                clearMarkers();
+                map.setView([latitud.value, longitud.value], 13);
+                var marker = L.marker([latitud.value, longitud.value], {draggable:true}).addTo(map);
+                marker.on('dragend', function(event){
+                    var newLocation = this.getLatLng();
+                    latitud.value = newLocation.lat;
+                    longitud.value = newLocation.lng;
+                });
+                markers.push(marker);
+                return true;
+            } else {
+                return false;
+            }
+        };
+
+        const btnLocalizar = document.getElementById('btnLocalizar');
+
+        btnLocalizar.addEventListener('click', async function() {
+            city = document.getElementById('name').value;
+            geoLocalizacion = await apiNominatim(city, 'Buenos Aires', 'Argentina');
+        });
+    </script>
 {% endblock %}
