--- a/src/App/views/portal-user/beachResort.index.view.twig
+++ b/src/App/views/portal-user/beachResort.index.view.twig
@@ -12,7 +12,7 @@
                                                 <a href="beachResort?id={{ beachResort.fields.id }}">
                                                         <article>
                                                                 <h3>{{ beachResort.fields.name }}</h3>
-                                                                <img src="./../imagenes/sombrilla.jpeg" alt="carpa">
+                                                                <img src="{{ beachResort.fields.img }}" alt="{{ beachResort.fields.name }}">
                                                         </article>
                                                 </a>
                                         {% endif %}
