--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -21,6 +21,14 @@
 
 }
 
+.hamburguesa {
+  display: none;
+}
+
+.hambur h2 {
+  display: none;
+}
+
 body {
     margin: 0;
     font-family: 'Roboto', Arial, sans-serif;
@@ -32,8 +40,6 @@ body {
     background-position: center; /* Centrar la imagen */
     background-repeat: no-repeat; /* Evitar que se repita la imagen */
 }
-
-
 
 header > figure {
     height: 20rem;
@@ -557,3 +563,175 @@ section a {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+/*MEDIA MAX-WIDTH 832px-----------------*/
+@media screen and (max-width: 832px) {
+  
+  /* Estilos para el menú hamburguesa */
+  
+  .hambur {
+    position: relative;
+    height: 2.1rem;
+  }
+  
+  .hambur > h2 {
+    position: relative;
+    display: inline;
+    font-size: 1.6rem;
+    left: 1rem;
+  }
+  
+  .hamburguesa {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 2.5rem;
+    height: 2rem;  
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .hamburguesa span {
+    width: 30px;
+    height: 3px;
+    background-color: #000;
+    transition: all 0.3s ease-in-out;
+  }
+
+  /*navegación principal del sitio*/
+  .menu {
+    display: none;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    overflow: hidden;
+    height: auto;
+  }
+  
+  .menu.show {
+    display: block;
+    transition: all 0.3s ease-in-out;
+    margin-top:.5rem;
+  }
+  
+  .menu ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: auto;
+  }
+  
+  .menu li:not(:last-child) {
+    border-bottom: 0.2rem white solid;
+  }
+  
+  .menu li, .menu a {
+    background-color: rgb(238, 241, 239);
+    position: relative;
+    padding: 0.5rem;
+    margin: 0;
+  }
+  
+  .menu li {
+    background-color: rgb(2,82,85);
+  }
+  
+  .menu li a {
+    display: inline-block;
+    text-decoration: none;
+    background-color: rgb(2,82,85);
+    color: white;
+    font-size: 18px;
+  }
+  
+  .menu li a:hover {
+    background-color: red;
+  }
+  
+  .menu li a p:hover {
+    color: white;
+  }
+  
+  .menu li a:hover {
+    color: white;
+  }
+  
+  .menu li a i{
+    margin-right: 10px;
+  }
+  
+  #desplegable1, #desplegable2 {
+    color: white;
+    margin: 0 1rem;
+  }
+  
+  .menu .dropdown-menu{
+      display: none;
+      left: 0;
+      width: 100%;
+      background-color: rgb(2,82,85);
+      z-index: 999;
+      overflow: hidden;
+      height: auto;
+      transition: all 0.3s ease-in-out;
+    }
+    
+    .menu .dropdown-menu li {
+      margin: 10px 0;
+      text-align: center;
+      height: 2rem;
+    }
+    
+    .menu .dropdown-menu li a {
+      text-decoration: none;
+      color: white;
+      font-size: 18px;
+      margin-top: 0px;
+      margin-bottom: 0px;
+    }
+    
+    .menu .dropdown-menu li p {
+      text-decoration: none;
+      color: rgb(2,82,85);
+      font-size: 18px;
+      margin-top: 0px;
+      margin-bottom: 0px;
+    }
+  
+  .menu .sub-menu {
+      top: 0;
+      margin-top: -1px;
+      margin-left: 0;
+    }
+    
+    .menu .dropdown-menu.mostrar {
+      display: block;
+      margin-top: 0rem;
+      max-height: 500px;
+      transition: all 0.3s ease-in-out;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      flex-direction: column;
+    }
+    
+    .icono {
+      width: 50vw;
+    }
+
+    article {
+      display: block;
+      margin: auto;
+      text-align: center;
+    }
+
+    h2 {
+      text-align: center;
+      padding: 0;
+    }
+    
+} /*END MEDIA MAX-WIDTH 832px*/
