--- a/src/App/views/parts/head.view.twig
+++ b/src/App/views/parts/head.view.twig
@@ -19,3 +19,13 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <title> {{ titulo }} </title>
 </head>
+
+<header>
+    <section class="hambur">
+        <button class="hamburguesa">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+    </section>
+</header>
