--- a/src/App/views/portal-user/index.view.twig
+++ b/src/App/views/portal-user/index.view.twig
@@ -25,7 +25,7 @@
         <section class= "card-container">
             <h2>Ciudades</h2>
             {% for city in cities   %}
-             <a href="/beachResortIndex">
+             <a href="/beachResortsCity?id={{ city.fields.id }}">
                 <article class="card">    
                     <h3>{{ city.fields.name }}</h3>
                     <figure>
