--- a/src/App/views/parts/nav.view.twig
+++ b/src/App/views/parts/nav.view.twig
@@ -1,8 +1,9 @@
 <nav class="menu">
     <ul>
         <li class="logo-item">
-            <img src="./../../imagenes/logo.png" alt="logo">
-            <span>TENTS</span>
+            <a href="/">
+                <img src="./../../imagenes/logo.png" alt="logo">
+            </a>
         </li>
         {% for item in menu %}
             {% if item.name == 'Acceso' %}
