--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -85,18 +85,18 @@ nav ul li {
   margin-right: 20px;
 }
 
-nav ul li.logo-item {
+.logo-item {
   display: flex; /* Usar flexbox para alinear los elementos internos */
   align-items: center; /* Alinear verticalmente */
 }
 
-nav ul li.logo-item img {
+.logo-item img {
   height: 5rem; /* Altura máxima de la imagen */
   vertical-align: middle; /* Alinear verticalmente la imagen con el texto */
   margin-right: 10px; /* Espacio entre el logo y el texto */
 }
 
-nav ul li.logo-item span {
+.logo-item span {
   font-size: 1.2rem; /* Tamaño de fuente del texto */
   color: white; /* Color del texto */
 }
@@ -107,6 +107,8 @@ nav ul li a {
   padding: 12px 18px;
   display: block;
   transition: background-color 0.3s, color 0.3s;
+  font-family: 'Century Gothic', sans-serif;
+  font-size: var(--section-description-size);
 }
 
 nav ul li a:hover {
@@ -735,3 +737,32 @@ section a {
     }
     
 } /*END MEDIA MAX-WIDTH 832px*/
+
+/*MEDIA MAX-WIDTH 491px-----------------*/
+@media screen and (max-width: 491px) {
+    
+  body {
+    font-size: 3vw;
+  }
+
+  button {
+    width: min-content;
+  }
+
+  footer ul {
+    width: 50%;
+    text-align: center;  
+  }
+  
+  footer p {
+    width: 50%;
+    text-align: center;
+  }
+  
+  footer a {
+    width: 100%;
+    height: 3rem;
+    text-align: center;
+    margin-top: 0.5rem;
+  }
+}
